--- a/01-时间序列分析.md
+++ b/01-时间序列分析.md
@@ -1,17 +1,28 @@
 # 时间序列分析
-以$r_t$表示一组数据, 或一个时间序列
+以`r_t`表示一组数据, 或一个时间序列
 ## 通用概念: 均值, 方差, 标准差, 协方差, 相关系数
 1. 均值
-$$\mu_t=E(r_t)$$
+  $$
+  \mu_t=E(r_t)
+  $$
+  
 
 2. 方差
-$$\sigma^2=E(r_t-\mu_t)^2$$
+  $$
+  \sigma^2=E(r_t-\mu_t)^2
+  $$
 
 3. 标准差
-$$\sigma=\sqrt{\sigma^2}$$
+  $$
+  \sigma=\sqrt{\sigma^2}
+  $$
 
 4. 协方差
-$$Cov(X_t, Y_t)=E[(X_t-\mu_x)(Y_t-\mu_y)]$$
+  $$
+  Cov(X_t, Y_t)=E[(X_t-\mu_x)(Y_t-\mu_y)]
+  $$
+
+5. 
 - 协方差用来度量两个变量各个维度偏离其均值的程度, 这与只表示一个变量误差的方差不同. 协方差的值如果为正值, 则说明两者是正相关的(从协方差可以引出"相关系数"的定义), 结果为负值就说明负相关的, 如果为0, 也是就是统计上说的"相互独立".
 - 假设有两个随机变量X, Y, 大致上有:
   - 若协方差为正数: X增大, Y增大; X减小, Y减小, 即变化趋势相同.
@@ -19,7 +30,9 @@ $$Cov(X_t, Y_t)=E[(X_t-\mu_x)(Y_t-\mu_y)]$$
   - 若协方差为零: X与Y的变化没有任何关系.
 
 5. 相关系数
-$$\rho_{xy}=\frac{Cov(X, Y)}{\sqrt{Var(X)Var(Y)}}=\frac{E[(X-\mu_{x})(Y-\mu_{y})]}{\sqrt{E(X-\mu_x)^2E(Y-\mu_y)^2}}$$
+  $$
+  \rho_{xy}=\frac{Cov(X, Y)}{\sqrt{Var(X)Var(Y)}}=\frac{E[(X-\mu_{x})(Y-\mu_{y})]}{\sqrt{E(X-\mu_x)^2E(Y-\mu_y)^2}}
+  $$
 - 相关系数是研究变量之间线性相关程度的量.
 - 求出协方差之后, 我们考虑一个问题就是协方差对应这每一个"协"关系, 他们对应的比值是多少, 所谓对应的比值可以理解为每一个"协"距离整体的距离比值是百分之几?
 - 两个的“协”对应他们的整体距离比值是百分之几, 这能够表示他们之间有多相关, 这个相关系数越大, 表示这两个数值越有关系.
@@ -38,16 +51,24 @@ $$\rho_{xy}=\frac{Cov(X, Y)}{\sqrt{Var(X)Var(Y)}}=\frac{E[(X-\mu_{x})(Y-\mu_{y})
 时间序列的特点是一维, 因此如果借用统计学上面的指标衡量, 有些不太适宜. 根据时间序列的特点, 形成了自协方差, 自相关函数, 偏自相关函数. 看到前面都加了一个"自", 原因是时间序列没法在找到一个别的数据和自己来进行比较; 只能自己和自己来比较, 自己和自己慢几拍(滞后)的这些数据进行比较, 所以加入了一个"自".
 
 1. 自协方差
-$$r(k)=\frac{1}{n}\sum_{t=k+1}^n(Z_t-\overline{Z})(Z_{t-k}-\overline{Z})$$
+  $$
+  r(k)=\frac{1}{n}\sum_{t=k+1}^n(Z_t-\overline{Z})(Z_{t-k}-\overline{Z})
+  $$
+
+2. 
 - 在统计学中, 特定时间序列或者连续信号的自协方差是信号与其经过时间平移的信号之间的协方差
 - 可以认为自协方差是某个信号与其自身经过一定时间平移之后的相似性, 自协方差就表示了在那个时延的相关性
 
 2. 自相关系数(ACF, AutoCorrelation Function) 指不同时点的变量之间的相关性, 形象来说就是度量自己过去的行为对自己现在的影响.
-$$\rho_k=\frac{Cov(r_k, r_{t-k})}{\sqrt{Var(r_t)Var(r_{t-k})}}=\frac{Cov(r_t, r_{t-k})}{Var(r_t)}$$
+  $$
+  \rho_k=\frac{Cov(r_k, r_{t-k})}{\sqrt{Var(r_t)Var(r_{t-k})}}=\frac{Cov(r_t, r_{t-k})}{Var(r_t)}
+  $$
 - 自相关(autocorrelation), 也叫序列相关, 是一个信号于其自身在不同时间点的相关度. 非正式地来说, 它就是两次观察之间的相似度对它们之间的时间差的函数. 它是找出重复模式(如被噪声掩盖的周期信号), 或识别隐含在信号谐波频率中消失的基频的数学工具. 它常用于信号处理中, 用来分析函数或一系列值, 如时域信号.
 
 3. 偏自相关系数(PACF)
-$$PACF(k)=\frac{E(r_t-Er_t)(r_{t-k}-Er_{t-k})}{\sqrt{E(r_t-Er_t)^2E(r_{t-k}-Er_{t-k})^2}}=\frac{Cov[(r_t-\overline{r_t}), (r_{t-k}-\overline{r_{t-k}})]}{\sqrt{Var(r_t-\overline{r_t})Var(r_{t-k}-\overline{r_{t-k}}))}}$$
+  $$
+  PACF(k)=\frac{E(r_t-Er_t)(r_{t-k}-Er_{t-k})}{\sqrt{E(r_t-Er_t)^2E(r_{t-k}-Er_{t-k})^2}}=\frac{Cov[(r_t-\overline{r_t}), (r_{t-k}-\overline{r_{t-k}})]}{\sqrt{Var(r_t-\overline{r_t})Var(r_{t-k}-\overline{r_{t-k}}))}}
+  $$
 
 - 根据ACF求出滞后k自相关系数$\rho_k$时, 实际上得到并不是r(t)与r(t-k)之间单纯的相关关系.
 - 因为r(t)同时还会受到中间k-1个随机变量r(t-1), r(t-2), ..., r(t-k+1)的影响, 而这k-1个随机变量又都和r(t-k)具有相关关系, 所以自相关系数里面实际掺杂了其他变量对r(t)与r(t-k)的影响.
@@ -58,10 +79,14 @@ $$PACF(k)=\frac{E(r_t-Er_t)(r_{t-k}-Er_{t-k})}{\sqrt{E(r_t-Er_t)^2E(r_{t-k}-Er_{
 # 时间序列分解
 ## 时间序列可分为趋势, 季节性和噪声
 1. 加法模型
-$$y(t) = Trend + Seasonality + Noise$$
+  $$
+  y(t) = Trend + Seasonality + Noise
+  $$
 
 2. 乘法模型
-$$y(t) = Trend * Seasonality * Noise$$
+  $$
+  y(t) = Trend * Seasonality * Noise
+  $$
 
 ## 序列分解
 ```python
@@ -77,6 +102,7 @@ plt.show()
 # 平稳序列
 [平稳/非平稳时间序列](https://cloud.tencent.com/developer/article/1638198)
 平稳序列的三个基本准则(带有趋势和季节性成分的时间序列都是非平稳的):
+
 1. 序列的均值(mean)不应该是时间的函数(意思是不应该随时间变化), 而应该是一个常数
 2. 序列的方差(variance)不应该是时间的函数. 这种特性称为homoscedasticity(同方差性)
 3. t时间段的序列和前一个时间段的序列的协方差(协方差, 衡量的是两个变量在一段时间内同向变化的程度)应该只和时间间隔有关, 而与时间t无关, 在时间序列中, 因为是同一个变量在不同时间段的值序列, 所以这里的协方差称为自协方差.
